--- a/css/estilos.css
+++ b/css/estilos.css
@@ -15,7 +15,7 @@ body
     color: white;
     font-weight: bold;
     margin: 0;
-    padding: 0.5em 0 0.5em 2em;
+    padding: 0.5em;
 }
 #cabecera #logo
 {
@@ -46,4 +46,11 @@ body
 {
     background: white;
     padding: 1em;
+}
+#footer
+{
+    background: #37488b;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
 }
